fix : SecurityConfig
접근 가능한 api에 대해서 error 를 내려주는 일이 없게 security config 를 수정하였습니다.